MDMA-13 Fix layout issue for mobile2

--- a/assets/sass/components/_my-account.scss
+++ b/assets/sass/components/_my-account.scss
@@ -106,4 +106,11 @@ form.verify-password-form {
             padding-left: 3rem;
         }
     }
+
+    // Mobile Number
+    .MyProfileForm_primary_number {
+        .form-item {
+            margin-bottom: 0;
+        }
+    }
 }
